# decoder_ring

./: .gitignore  CMakeLists.txt  README.md
docs/: API.md
plans/: 2026-06-10-decoder-ring-design.md  2026-06-10-decoder-ring-implementation.md
public/: DecoderRingApi.h
src/: AddonShared.h  dllmain.cpp
src/chat/: ChatLinks.cpp  ChatLinks.h  SpecData.h  WaypointNames.cpp  WaypointNames.h  WaypointTable.h
src/resolve/: AsyncResolver.h  DecoderService.cpp  DecoderService.h  Http.h  Http_WinINet.cpp  ItemResolver.cpp  ItemResolver.h  Labels.cpp  Labels.h  Language.cpp  Language.h  OfflineResolve.cpp  OfflineResolve.h  PriceCache.cpp  PriceCache.h  RecipeResolver.cpp  RecipeResolver.h  RecordFill.cpp  RecordFill.h  SkillFact.cpp  SkillFact.h  SkillResolver.cpp  SkillResolver.h  SkinResolver.cpp  SkinResolver.h  TraitResolver.cpp  TraitResolver.h
tests/: isolation_main.cpp  test_main.cpp
tools/: gen_waypoints.py
